--- a/fly.toml
+++ b/fly.toml
@@ -11,7 +11,8 @@ console_command = '/rails/bin/rails console'
 
 [env]
   RAILS_ENV = 'production'
-bin/rails db:migrate[http_service]
+
+[http_service]
   internal_port = 3000
   force_https = true
   auto_stop_machines = 'stop'
