--- a/fly.toml
+++ b/fly.toml
@@ -7,18 +7,8 @@ app = 'orderx-backend'
 primary_region = 'iad'
 console_command = '/rails/bin/rails console'
 
-[build]
-
 [env]
   RAILS_ENV = 'production'
-
-[http_service]
-  internal_port = 3000
-  force_https = true
-  auto_stop_machines = 'stop'
-  auto_start_machines = true
-  min_machines_running = 1
-  processes = ['app']
 
 [[services]]
   protocol = 'tcp'
@@ -40,6 +30,6 @@ console_command = '/rails/bin/rails console'
     protocol = 'http'
 
 [[vm]]
-  memory = '512mb'
+  memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
